@@ -6,25 +6,35 @@
 
     <groupId>wtf.casper</groupId>
     <artifactId>amethyst</artifactId>
-    <version>1.0.0</version>
+    <version>${amethyst.version}</version>
     <packaging>pom</packaging>
 
     <properties>
         <java.version>17</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <amethyst.version>1.0.2</amethyst.version>
     </properties>
 
     <modules>
         <module>standalone</module>
         <module>minecraft</module>
+        <module>folia</module>
         <module>paper</module>
+        <module>paper-shaded</module>
+        <module>paper-tests</module>
         <module>bungee</module>
         <module>velocity</module>
-        <module>paper-shaded</module>
     </modules>
 
     <build>
         <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <argLine>--add-opens java.base/java.util=ALL-UNNAMED --add-opens java.base/java.lang=ALL-UNNAMED</argLine>
+                </configuration>
+            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
@@ -40,15 +50,6 @@
             </plugin>
         </plugins>
     </build>
-
-    <dependencies>
-        <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
-            <version>1.18.26</version>
-            <scope>provided</scope>
-        </dependency>
-    </dependencies>
 
     <distributionManagement>
         <repository>
